# imageditor-qt

./: .gitignore  CMakeLists.txt  README.md  colorsize.cpp  colorsize.h  colorsize.ui  commands.cpp  commands.h  convert.cpp  convert.h  effectwindow.cpp  effectwindow.h  effectwindow.ui  imagelabelfordrawing.cpp  imagelabelfordrawing.h  imagelabelwithrubberband.cpp  imagelabelwithrubberband.h  imageviewer.cpp  imageviewer.h  main.cpp  paintwindow.cpp  paintwindow.h  paintwindow.ui  resource.qrc
